tests/suite/java-imports/fail/MissingClass.hs
module MissingClass where

import java "java.lang.Math1"
